--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Pickleball Tracker - The Story Behind Your Favorite Scoring App</title>
-    <meta name="description" content="Learn about the team behind Pickleball Tracker app. Discover how our passion for pickleball led to creating the best score tracking and performance analysis app.">
-    <meta name="keywords" content="pickleball tracker app, pickleball score tracking app, about pickleball tracker, pickleball app developers, pickleball technology, pickleball scoring solution">
+    <meta name="description" content="Learn the story behind Pickleball Tracker and our free companion Tournament Manager. Built by a pickleball player with love for the community.">
+    <meta name="keywords" content="pickleball tracker app, pickleball score tracking app, pickleball stats, tournament manager, pickleball bracket, round robin, partner rotation">
     
     <!-- Favicon and App Icons -->
     <link rel="icon" type="image/png" href="pickleball_tracker_splash_icon.png">
@@ -46,6 +46,7 @@
 
     <nav>
         <a href="index.html">Home</a>
+        <a href="pbm.html">Tournament Manager</a>
         <a href="support.html">Support</a>
         <a href="feedback.html">Feedback</a>
         <a href="about.html" class="active">About</a>
@@ -61,6 +62,21 @@
             <p class="center">
                 <a class="cta-secondary" href="feedback.html">Send feedback</a>
                 <a class="cta-secondary" href="support.html">Get support</a>
+            </p>
+        </div>
+
+        <div class="content-section">
+            <h2>Free Tournament Manager (Web App)</h2>
+            <p>We also built a free, browser-based <strong>Pickleball Tournament Manager</strong> to help you run brackets, round robins, and partner rotation with friends—no account required.</p>
+            <ul class="feature-list">
+                <li>Singles, Doubles, and Partner Rotation</li>
+                <li>Single Elimination and Round Robin formats</li>
+                <li>Enter scores as you go—winners advance automatically</li>
+                <li>Saves locally in your browser</li>
+            </ul>
+            <p class="center">
+                <a class="cta-secondary" href="pbm.html">Open Tournament Manager</a>
+                <a class="cta-secondary" href="pbm-instructions.html">Instructions</a>
             </p>
         </div>
     </div>
