--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 
     <nav>
         <a href="index.html" class="active">Home</a>
+        <a href="pbm.html">Tournament Manager</a>
         <a href="support.html">Support</a>
         <a href="feedback.html">Feedback</a>
         <a href="about.html">About</a>
@@ -234,6 +235,21 @@
             <div class="screenshot">
                 <img src="10.png" alt="Players - Stores your player list"> 
             </div>
+        </section>
+
+        <section class="content-section">
+            <h2>Bonus: Pickleball Tournament Manager</h2>
+            <p>Running a mini tournament, round robin, or partner rotation with friends? Use the free Tournament Manager to create brackets, enter scores, and keep things organized—right in your browser.</p>
+            <ul class="feature-list">
+                <li><strong>Singles, Doubles, and Partner Rotation</strong></li>
+                <li><strong>Single Elimination</strong> and <strong>Round Robin</strong> formats</li>
+                <li>Enter scores as you go—winners advance automatically</li>
+                <li>Saves locally in your browser (no account needed)</li>
+            </ul>
+            <p class="center">
+                <a class="cta-secondary" href="pbm.html">Open Tournament Manager</a>
+                <a class="cta-secondary" href="pbm-instructions.html">How it works</a>
+            </p>
         </section>
 
         <footer>
