--- a/feedback.html
+++ b/feedback.html
@@ -46,6 +46,7 @@
 
     <nav>
         <a href="index.html">Home</a>
+        <a href="pbm.html">Tournament Manager</a>
         <a href="support.html">Support</a>
         <a href="feedback.html" class="active">Feedback</a>
         <a href="about.html">About</a>
