--- a/support.html
+++ b/support.html
@@ -46,6 +46,7 @@
 
     <nav>
         <a href="index.html">Home</a>
+        <a href="pbm.html">Tournament Manager</a>
         <a href="support.html" class="active">Support</a>
         <a href="feedback.html">Feedback</a>
         <a href="about.html">About</a>
