--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 
             <section class="app-section">
                 <img src="pickleball_tracker_splash_icon.png" alt="Pickleball Tracker Icon" class="app-icon">
-                <h2>Log games fast. Improve faster.</h2>
-                <p class="lead">Track your pickleball scores in seconds, then get clear insights that help you win more—without spreadsheets.</p>
+                <h2>Log games in seconds. Get better every week.</h2>
+                <p class="lead">Track scores fast, then see win rate, point margin, and trends that tell you exactly what to work on next.</p>
                 
                 <ul class="feature-bullets">
                     <li><strong>Instant insights:</strong> win rate, point margin, close games, scoring trends.</li>
