--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
     <header>
         <h1>Pickleball Tracker</h1>
         <p class="subtitle">Play. Track. Improve. Repeat.</p>
-        <p class="version-badge">v2.5</p>
+        <div class="version-row">
+            <img src="pickleball_tracker_splash_icon.png" alt="Pickleball Tracker App Icon" class="header-logo">
+            <p class="version-badge">v2.5</p>
+        </div>
     </header>
 
     <nav>
@@ -125,7 +128,6 @@
             </section>
 
             <section class="app-section">
-                <img src="pickleball_tracker_splash_icon.png" alt="Pickleball Tracker Icon" class="app-icon">
                 <h2>Log games in seconds. Get better every week.</h2>
                 <p class="lead">Track scores fast, then see win rate, point margin, and trends that tell you exactly what to work on next.</p>
                 
@@ -150,7 +152,7 @@
         </div>
 
         <div class="feature-section">
-            <h2>Now Available for iPhone and Apple Watch!</h2>
+            <h2>Available for iPhone and Apple Watch!</h2>
             <div class="device-section">
                 <div class="device-item">
                     <div class="device-icon">
