--- a/pbm.html
+++ b/pbm.html
@@ -22,6 +22,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="text/babel" src="pbm.js"></script>
+    <script type="text/babel" data-presets="env,react" src="pbm.js"></script>
 </body>
 </html>
